deps/chakrashim/core/test/Error/PartInitStackFrame.baseline
Error: Internal error
	at foo (partinitstackframe.js:15:18)
	at Global code (partinitstackframe.js:24:3)
